# ColdlightEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ColdlightEngine.sln  GenerateProjects-VS2022.bat  GenerateProjects.bat  LICENSE  README.md  premake5.lua
.github/workflows/: c-cpp.yml
Engine/: CMakeLists.txt  Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  SceneObject.cpp  SceneObject.h  Test.cpp  Test.h
Engine/Core/: CoreMinimal.h  FunctionTimer.h
Engine/Core/SmartPointer/: UniquePtr.h
Engine/Source/: Engine.h  clpch.cpp
Engine/Source/AutomaticTest/: AutomaticTestFramework.cpp  AutomaticTestFramework.h  UnitTest.h
Engine/Source/Core/: Application.cpp  Application.h  CoreMinimal.h  EntryPoint.h
Engine/Source/Core/LogSystem/: Log.cpp  Log.h
Engine/Source/Core/Object/: GameObject.cpp  GameObject.h
Engine/Source/Core/SmartPointer/: CSharePtr.h  CSharedPtr.h  SharedPtr.h  UniquePtr.h
Engine/Source/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Engine/Source/UnitTest/: UnitTestProxy.cpp  UnitTester.h
Engine/UnitTest/: TestCaseBase.h  UnitTestProxy.h  UnitTester.cpp
Playground/: CMakeLists.txt
Playground/Source/: TestProjectApp.cpp
Playground/Source/UnitTest/: TestCase1.cpp
TestProject/: Application.cpp  TestProject.vcxproj  TestProject.vcxproj.filters  TestProjectApp.cpp  main.cpp
TestProject/UnitTest/: TestCase1.cpp  TestCase1.h
